<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Minimal</string>
    <string name="action_settings">Settings</string>
    <string name="no_to_dos">You don\'t have any todos</string>
    <string name="title">Title</string>
    <string name="remind_me">Remind Me</string>
    <string name="choose_date">Date</string>
    <string name="choose_time">Time</string>
    <string name="remind_date_and_time">Reminder set for %1$s, %2$s %3$s</string>
    <string name="about">About</string>
    <string name="app_version">Version: %1$s</string>
    <string name="contact_me">You can contact me at</string>
    <string name="made_by">Made by Avjinder</string>
    <string name="done_label">Done</string>
    <string name="date_reminder_default" translatable="false">Today</string>
    <string name="date_error_check_again" translatable="false">The date you entered is in the past.</string>
    <string name="night_mode" translatable="false">Night Mode</string>
    <string name="night_mode_on_summary" translatable="false">Night mode is on</string>
    <string name="night_mode_off_summary" translatable="false">Night mode is off</string>
    <string name="description" translatable="false">Description</string>

    <string-array name="snooze_options">
        <item>10 Minutes</item>
        <item>30 Minutes</item>
        <item>1 Hour</item>
    </string-array>

    <string name="snooze">Snooze</string>
    <string name="remove">Remove</string>
    <string name="todo_error" translatable="false">Please enter a Todo</string>
    <string name="very_important" translatable="false">very important</string>
    <string name="important" translatable="false">important</string>
    <string name="less_important" translatable="false">less important</string>
    <string name="not_important" translatable="false">not important</string>
    <string name="Language">Language</string>
    <string name="Persian">Persian</string>
    <string name="English">English</string>
    <string name="language_pref_key">LanguagePreference</string>
    <string name="warn_me">warn me</string>
    <string name="sort_button">Sort</string>
    <string name="filter_button">Filter</string>
    <string name="sort_by">sort by :</string>
    <string name="create_time">create time</string>
    <string name="date">date</string>
    <string name="importance">importance</string>
    <string name="decrease_increase">decrease/increase</string>
    <string name="increase">increase</string>
    <string name="decrease">decrease</string>
    <string name="apply">apply</string>
    <string name="Importance_filters">Importance filters</string>
    <string name="filter">filter</string>
    <string name="Type_filters">type filters</string>
    <string name="add">add attachment</string>
    <string name="back">back</string>
    <string name="ok">ok</string>
    <string name="new_type">New Type</string>
    <string name="newType_pref_key">newTypePreference</string>
    <string name="select_your_work_day">Select Your Work Day:</string>
    <string name="workHours">time you work. eg from 8 to 18:</string>
    <string name="from">from:</string>
    <string name="to">to:</string>
    <string name="work_error">Empty Work Hours</string>
    <string name="select_month">Select Month</string>
    <string name="select_day">Select Day</string>
    <string name="select_year">Select Year</string>
    <string name="group">group todos</string>
    <string name="prsonal">personal todos</string>
    <string name="no_to_dos_group">you don\'t have any group todos</string>
</resources>
