<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
        <CheckBoxPreference
            android:title="@string/night_mode"
            android:summaryOn="@string/night_mode_on_summary"
            android:summaryOff="@string/night_mode_off_summary"
            android:defaultValue="false"
            android:key="@string/night_mode_pref_key"
            />
        <CheckBoxPreference
            android:title="@string/Language"
            android:summaryOn="@string/Persian"
            android:summaryOff="@string/English"
            android:defaultValue="false"
            android:key="@string/language_pref_key"
            />
        <EditTextPreference

            android:title="@string/new_type"
            android:hint="@string/new_type"
            android:inputType="textShortMessage"
            android:key="@string/newType_pref_key"
            android:summary="@string/new_type"
            ></EditTextPreference>


</PreferenceScreen>

