<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:gravity="center|top"
    android:layout_height="match_parent">


    <TextView
        android:text="@string/Importance_filters"
        android:gravity="center"
        android:textSize="24sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/filter_importance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/filter"
        android:padding="8dp"
        android:visibility="visible" />

    <TextView
        android:id="@+id/aboutVersionTextView"
        android:text="@string/Type_filters"
        android:layout_marginTop="4dp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


    <Button
        android:id="@+id/filter_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/filter"
        android:padding="8dp"
        android:visibility="visible" />

    <Button
        android:id="@+id/filter_apply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/apply"
        android:padding="8dp"
        android:visibility="visible" />
</LinearLayout>