<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:animateLayoutChanges="true"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_width="match_parent"
    >

    <include layout="@layout/base_toolbar"/>

    <TextView
        android:id="@+id/yearLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_year" />


    <EditText
        android:id="@+id/yearPersian"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/monthSpinnerLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_month" />

    <Spinner
        android:id="@+id/monthSpinner"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/daySpinnerLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_day" />

    <Spinner
        android:id="@+id/daySpinner"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:textAlignment="center"/>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/transformFloatingActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:src="@drawable/transform_icon"
            app:fabSize="normal"
            app:layout_anchor="@id/editTextParentLinearLayout"
            app:layout_anchorGravity="bottom|right" />


    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Date Changed to Christian" />

    <TextView
        android:id="@+id/christianDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"
        android:text="press the button" />


</LinearLayout>